Generating binary numbers from itertools

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 01.1-knapsack/__pycache__/knapsack_problem.cpython-38.pyc
+01.2-steepest_ascent/cec2017/__pycache__/__init__.cpython-38.pyc
+01.2-steepest_ascent/cec2017/__pycache__/basic.cpython-38.pyc
+01.2-steepest_ascent/cec2017/__pycache__/composition.cpython-38.pyc
+01.2-steepest_ascent/cec2017/__pycache__/functions.cpython-38.pyc
+01.2-steepest_ascent/cec2017/__pycache__/hybrid.cpython-38.pyc
+01.2-steepest_ascent/cec2017/__pycache__/simple.cpython-38.pyc
+01.2-steepest_ascent/cec2017/__pycache__/transforms.cpython-38.pyc
+.vscode/settings.json
